--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -29,6 +29,19 @@
                         </avalonDockLayout:LayoutAnchorablePane>
                     </avalonDockLayout:LayoutAnchorablePaneGroup>
                 </avalonDockLayout:LayoutPanel>
+
+                <avalonDockLayout:LayoutRoot.RightSide>
+                    <avalonDockLayout:LayoutAnchorSide>
+                        <avalonDockLayout:LayoutAnchorGroup>
+                            <avalonDockLayout:LayoutAnchorable Title="AutoHide1 Content">
+                                <TextBox Text="{Binding TestTimer, Mode=OneWay, StringFormat='AutoHide Attached to Timer ->\{0\}'}"/>
+                            </avalonDockLayout:LayoutAnchorable>
+                            <avalonDockLayout:LayoutAnchorable Title="AutoHide2 Content">
+                                <TextBox Background="{Binding TestBackground}"/>
+                            </avalonDockLayout:LayoutAnchorable>
+                        </avalonDockLayout:LayoutAnchorGroup>
+                    </avalonDockLayout:LayoutAnchorSide>
+                </avalonDockLayout:LayoutRoot.RightSide>
             </avalonDockLayout:LayoutRoot>
         </avalonDock:DockingManager>
     </Grid>
