Almost completed dragging functionalities
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@88119 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -52,7 +52,7 @@
                     </avalonDockLayout:LayoutAnchorablePaneGroup>
                 </avalonDockLayout:LayoutPanel>
 
-                <avalonDockLayout:LayoutRoot.RightSide>
+                <avalonDockLayout:LayoutRoot.LeftSide>
                     <avalonDockLayout:LayoutAnchorSide>
                         <avalonDockLayout:LayoutAnchorGroup>
                             <avalonDockLayout:LayoutAnchorable Title="AutoHide1 Content">
@@ -63,7 +63,7 @@
                             </avalonDockLayout:LayoutAnchorable>
                         </avalonDockLayout:LayoutAnchorGroup>
                     </avalonDockLayout:LayoutAnchorSide>
-                </avalonDockLayout:LayoutRoot.RightSide>
+                </avalonDockLayout:LayoutRoot.LeftSide>
             </avalonDockLayout:LayoutRoot>
         </avalonDock:DockingManager>
     </Grid>
