Build 2.0.0100 - Focus management completion, setup of layout serialization
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@88127 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -20,6 +20,10 @@
                 <MenuItem Command="Copy" />
                 <MenuItem Command="Paste" />
             </MenuItem>
+            <MenuItem Header="Layout">
+                <MenuItem Header="Save" Click="OnSaveLayout"/>
+                <MenuItem Header="Load" Click="OnLoadLayout"/>
+            </MenuItem>
         </Menu>
         
         <avalonDock:DockingManager Grid.Row="1" x:Name="dockManager">
