--- a/AvalonDock/AvalonDock/Themes/generic.xaml
+++ b/AvalonDock/AvalonDock/Themes/generic.xaml
@@ -41,13 +41,18 @@
                 </Style>
             </Setter.Value>
         </Setter>
+        <!--<Setter Property="ItemTemplate" 
+                Value="{Binding ContentHeaderTemplate, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>-->
+
+        <!--<TextBlock Text="{Binding Title}" TextTrimming="CharacterEllipsis"/>-->
         <Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Title}"  TextTrimming="CharacterEllipsis"/>
+                    <avalonDockControls:LayoutDocumentTabItem Model="{Binding}"/>
                 </DataTemplate>
             </Setter.Value>
         </Setter>
+        
         <Setter Property="ContentTemplate">
             <Setter.Value>
                 <DataTemplate>
@@ -94,15 +99,23 @@
                     </Style.Triggers>
                 </Style>
             </Setter.Value>
-            
         </Setter>
+
         <Setter Property="ItemTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <avalonDockControls:LayoutAnchorableTabItem Model="{Binding}"/>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+        
+        <!--<Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
                     <TextBlock Text="{Binding Title}" TextTrimming="CharacterEllipsis"/>
                 </DataTemplate>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
         
         <Setter Property="ContentTemplate">
             <Setter.Value>
@@ -251,6 +264,14 @@
         </Setter>
     </Style>
 
+    <DataTemplate x:Key="DocumentHeaderTemplate">
+        <TextBlock Text="{Binding Title}" TextTrimming="CharacterEllipsis"/>
+    </DataTemplate>
+
+    <DataTemplate x:Key="AnchorableHeaderTemplate">
+        <TextBlock Text="{Binding Title}" TextTrimming="CharacterEllipsis"/>
+    </DataTemplate>
+    
     <!--DockingManager-->
     <Style x:Key="{x:Type avalonDock:DockingManager}" TargetType="{x:Type avalonDock:DockingManager}">
         <Setter Property="DocumentPaneControlStyle" Value="{StaticResource DocumentPaneControlStyle}"/>
@@ -258,6 +279,8 @@
         <Setter Property="AnchorSideTemplate" Value="{StaticResource AnchorSideTemplate}"/>
         <Setter Property="AnchorGroupTemplate" Value="{StaticResource AnchorGroupTemplate}"/>
         <Setter Property="AnchorTemplate" Value="{StaticResource AnchorTemplate}"/>
+        <Setter Property="DocumentHeaderTemplate" Value="{StaticResource DocumentHeaderTemplate}"/>
+        <Setter Property="AnchorableHeaderTemplate" Value="{StaticResource AnchorableHeaderTemplate}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type avalonDock:DockingManager}">
@@ -312,13 +335,48 @@
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}"/>
+                        <ContentPresenter Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}" 
+                                          ContentTemplate="{Binding DocumentTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
+                                          ContentTemplateSelector="{Binding DocumentTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
+
+    <Style TargetType="{x:Type avalonDockControls:LayoutDocumentTabItem}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type avalonDockControls:LayoutDocumentTabItem}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter Content="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}" 
+                                          ContentTemplate="{Binding DocumentHeaderTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
+                                          ContentTemplateSelector="{Binding DocumentHeaderTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type avalonDockControls:LayoutAnchorableTabItem}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type avalonDockControls:LayoutAnchorableTabItem}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter Content="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}" 
+                                          ContentTemplate="{Binding AnchorableHeaderTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
+                                          ContentTemplateSelector="{Binding AnchorableHeaderTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     <Style TargetType="{x:Type avalonDockControls:LayoutAnchorableControl}">
         <Setter Property="Template">
             <Setter.Value>
