--- a/AvalonDock/AvalonDock/Themes/generic.xaml
+++ b/AvalonDock/AvalonDock/Themes/generic.xaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:shell="clr-namespace:Microsoft.Windows.Shell"
                     xmlns:avalonDock="clr-namespace:AvalonDock"
                     xmlns:avalonDockLayout="clr-namespace:AvalonDock.Layout"
                     xmlns:avalonDockControls="clr-namespace:AvalonDock.Controls"
@@ -41,10 +42,6 @@
                 </Style>
             </Setter.Value>
         </Setter>
-        <!--<Setter Property="ItemTemplate" 
-                Value="{Binding ContentHeaderTemplate, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>-->
-
-        <!--<TextBlock Text="{Binding Title}" TextTrimming="CharacterEllipsis"/>-->
         <Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
@@ -344,7 +341,6 @@
         </Setter>
     </Style>
 
-
     <Style TargetType="{x:Type avalonDockControls:LayoutDocumentTabItem}">
         <Setter Property="Template">
             <Setter.Value>
@@ -352,10 +348,29 @@
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter Content="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}" 
-                                          ContentTemplate="{Binding DocumentHeaderTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
-                                          ContentTemplateSelector="{Binding DocumentHeaderTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Border Grid.ColumnSpan="2" Background="Transparent"/>
+                            <ContentPresenter Content="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}" 
+                                              ContentTemplate="{Binding DocumentHeaderTemplate, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"
+                                              ContentTemplateSelector="{Binding DocumentHeaderTemplateSelector, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}"/>
+                            <!-- Close button should be moved out to the container style -->
+                            <Button x:Name="DocumentCloseButton" Grid.Column="1" Margin="5,0,0,0" Visibility="Hidden" Command="{Binding DocumentCloseCommand, Mode=OneWay, RelativeSource={RelativeSource AncestorType={x:Type avalonDock:DockingManager}, Mode=FindAncestor}}" CommandParameter="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}">
+                                <Image Source="/AvalonDock;component/Images/PinClose.png"/>
+                            </Button>
+                        </Grid>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Path=IsSelected}" Value="true">
+                            <Setter Property="Visibility" Value="Visible" TargetName="DocumentCloseButton"  />
+                        </DataTrigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Visibility" Value="Visible" TargetName="DocumentCloseButton"  />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -389,12 +404,138 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <avalonDockControls:AnchorablePaneTitle Model="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}"/>
+                            <Border x:Name="Header">
+                                <avalonDockControls:AnchorablePaneTitle Model="{Binding Model, RelativeSource={RelativeSource TemplatedParent}}"/>
+                            </Border>
                             <ContentPresenter Content="{Binding Model.Content, RelativeSource={RelativeSource TemplatedParent}}" Grid.Row="1"/>
                         </Grid>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Parent.IsDirectlyHostedInFloatingWindow}" Value="True">
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="Header"/>
+                        </DataTrigger>                        
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="{x:Type avalonDockControls:LayoutDocumentFloatingWindowControl}" TargetType="{x:Type avalonDockControls:LayoutDocumentFloatingWindowControl}">
+        <Setter Property="shell:WindowChrome.WindowChrome">
+            <Setter.Value>
+                <shell:WindowChrome
+                    ResizeBorderThickness="3"
+                    CaptionHeight="16"
+                    CornerRadius="3,3,3,3"
+                    GlassFrameThickness="0"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type avalonDockControls:LayoutDocumentFloatingWindowControl}">
+                    <Grid>
+                        <Border x:Name="WindowBorder" BorderThickness="3" Background="Gray" BorderBrush="Gray">
+                            <Grid Margin="3">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="16"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding Path=Model.RootDocument.Title, RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Top" HorizontalAlignment="Left" />
+                                    <Button
+                                        Grid.Column="1">
+                                        <Image Source="/AvalonDock;component/Images/PinMenu.png"/>
+                                    </Button>
+                                    <Button shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                        Command="{x:Static shell:SystemCommands.MaximizeWindowCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}"
+                                        Grid.Column="2">
+                                        <Image Source="/AvalonDock;component/Images/PinMaximize.png"/>
+                                    </Button>
+                                    <Button shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                        Command="{x:Static shell:SystemCommands.CloseWindowCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}"
+                                        Grid.Column="3">
+                                        <Image Source="/AvalonDock;component/Images/PinClose.png"/>
+                                    </Button>
+                                </Grid>
+                                <ContentPresenter Content="{TemplateBinding Content}" Grid.Row="1"/>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsActive" Value="True">
+                            <Setter TargetName="WindowBorder"  Property="BorderBrush" Value="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="{x:Type avalonDockControls:LayoutAnchorableFloatingWindowControl}" TargetType="{x:Type avalonDockControls:LayoutAnchorableFloatingWindowControl}">
+        <Setter Property="shell:WindowChrome.WindowChrome">
+            <Setter.Value>
+                <shell:WindowChrome
+                    ResizeBorderThickness="3"
+                    CaptionHeight="16"
+                    CornerRadius="3,3,3,3"
+                    GlassFrameThickness="0"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type avalonDockControls:LayoutAnchorableFloatingWindowControl}">
+                    <Grid>
+                        <Border x:Name="WindowBorder" BorderThickness="3" Background="Gray" BorderBrush="Gray">
+                            <Grid Margin="3">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="16"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding Path=Model.SinglePane.SelectedContent.Title, RelativeSource={RelativeSource TemplatedParent}}" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                                    <Button
+                                        Grid.Column="1">
+                                        <Image Source="/AvalonDock;component/Images/PinMenu.png"/>
+                                    </Button>
+                                    <Button shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                        Command="{x:Static shell:SystemCommands.MaximizeWindowCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}"
+                                        Grid.Column="2">
+                                        <Image Source="/AvalonDock;component/Images/PinMaximize.png"/>
+                                    </Button>
+                                    <Button shell:WindowChrome.IsHitTestVisibleInChrome="True"
+                                        Command="{x:Static shell:SystemCommands.CloseWindowCommand}"
+                                        CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}"
+                                        Grid.Column="3">
+                                        <Image Source="/AvalonDock;component/Images/PinClose.png"/>
+                                    </Button>
+                                </Grid>
+                                <ContentPresenter Content="{TemplateBinding Content}" Grid.Row="1"/>
+                            </Grid>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsActive" Value="True">
+                            <Setter TargetName="WindowBorder"  Property="BorderBrush" Value="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
 </ResourceDictionary>
