Build 2.0.0238 - Added context menu for anchorables, fixed may issues, many graphics adjustments
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@88748 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.TestApp/MainWindow.xaml
@@ -49,10 +49,10 @@
                     </avalonDockLayout:LayoutDocumentPaneGroup>
                     <avalonDockLayout:LayoutAnchorablePaneGroup DockWidth="150">
                         <avalonDockLayout:LayoutAnchorablePane>
-                            <avalonDockLayout:LayoutAnchorable Title="Tool Window 1">
+                            <avalonDockLayout:LayoutAnchorable x:Name="ToolWindow1" Title="Tool Window 1">
                                 <TextBox Text="{Binding TestTimer, Mode=OneWay, StringFormat='Tool Window 1 Attached to Timer ->\{0\}'}"/>
                             </avalonDockLayout:LayoutAnchorable>
-                            <avalonDockLayout:LayoutAnchorable Title="Tool Window 2">
+                            <avalonDockLayout:LayoutAnchorable x:Name="ToolWindow2" Title="Tool Window 2">
                                 <TextBlock Text="{Binding FocusedElement}"/>
                             </avalonDockLayout:LayoutAnchorable>
                         </avalonDockLayout:LayoutAnchorablePane>
